--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: "AWS Copilot"
 description: "AWS Copilot GitHub Action"
-author: "ksivamuthu"
+author: "0xO0O0"
 inputs:
   command:
     required: true
@@ -9,6 +9,9 @@ inputs:
   app:
     required: false
     description: "application name"
+  svc:
+    required: false
+    description: "service name"
   env:
     required: false
     description: "environment name"
